Fix long timetable filter name overflowing its parent

--- a/wp-content/themes/salsa-siempre/scss/_timetable.scss
+++ b/wp-content/themes/salsa-siempre/scss/_timetable.scss
@@ -108,10 +108,9 @@ $timetable-font-size: 1.2;
 
 .timetable-filters-item {
 	cursor: pointer;
-	line-height: 4em;
+	line-height: 1.5em;
 	display: block;
-	height: 4em;
-	padding: 0 1em;
+	padding: 1.25em 1em;
 	margin-bottom: 0.1em;
 	color: $black-grey;
 	background-color: #dcdcdc;
